Refactor yaml config