@@ -18,26 +18,50 @@
 package org.apache.shardingsphere.mcp.bootstrap.config.yaml.swapper;
 
 import org.apache.shardingsphere.infra.exception.ShardingSpherePreconditions;
-import org.apache.shardingsphere.infra.util.yaml.YamlEngine;
+import org.apache.shardingsphere.infra.util.yaml.constructor.ShardingSphereYamlConstructor;
 import org.apache.shardingsphere.infra.util.yaml.swapper.YamlConfigurationSwapper;
 import org.apache.shardingsphere.mcp.bootstrap.config.MCPLaunchConfiguration;
 import org.apache.shardingsphere.mcp.bootstrap.config.MCPTransportConfiguration;
 import org.apache.shardingsphere.mcp.bootstrap.config.RuntimeDatabaseConfiguration;
+import org.apache.shardingsphere.mcp.bootstrap.config.yaml.config.YamlHttpTransportConfiguration;
 import org.apache.shardingsphere.mcp.bootstrap.config.yaml.config.YamlMCPLaunchConfiguration;
+import org.apache.shardingsphere.mcp.bootstrap.config.yaml.config.YamlMCPTransportConfiguration;
 import org.apache.shardingsphere.mcp.bootstrap.config.yaml.config.YamlRuntimeDatabaseConfiguration;
+import org.apache.shardingsphere.mcp.bootstrap.config.yaml.config.YamlStdioTransportConfiguration;
+import org.yaml.snakeyaml.LoaderOptions;
 import org.yaml.snakeyaml.Yaml;
 
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.Set;
 
 /**
  * YAML MCP launch configuration swapper.
  */
 public final class YamlMCPLaunchConfigurationSwapper implements YamlConfigurationSwapper<YamlMCPLaunchConfiguration, MCPLaunchConfiguration> {
     
+    private static final Set<String> ROOT_PROPERTIES = Set.of("transport", "runtimeDatabases");
+    
+    private static final Set<String> TRANSPORT_PROPERTIES = Set.of("http", "stdio");
+    
+    private static final Set<String> HTTP_PROPERTIES = Set.of("enabled", "bindHost", "port", "endpointPath");
+    
+    private static final Set<String> STDIO_PROPERTIES = Set.of("enabled");
+    
+    private static final Set<String> RUNTIME_DATABASE_PROPERTIES = Set.of("databaseType", "jdbcUrl", "username", "password", "driverClassName");
+    
+    private static final String NULL_CONFIG_ERROR_MESSAGE = "MCP launch configuration cannot be null.";
+    
     private static final String TRANSPORT_VALIDATION_ERROR_MESSAGE = "At least one transport must be explicitly enabled. Set `transport.http.enabled` or `transport.stdio.enabled` to true.";
+    
+    private static final String TRANSPORT_REQUIRED_ERROR_MESSAGE = "Property `transport` is required.";
+    
+    private static final String TRANSPORT_MAPPING_ERROR_MESSAGE = "Property `transport` must be a mapping.";
+    
+    private static final String RUNTIME_DATABASES_REQUIRED_ERROR_MESSAGE = "Property `runtimeDatabases` is required.";
+    
+    private static final String RUNTIME_DATABASES_MAPPING_ERROR_MESSAGE = "Property `runtimeDatabases` must be a mapping.";
     
     private final YamlMCPTransportConfigurationSwapper transportConfigSwapper = new YamlMCPTransportConfigurationSwapper();
     
@@ -59,6 +83,15 @@ public final class YamlMCPLaunchConfigurationSwapper implements YamlConfiguratio
         return result;
     }
     
+    @Override
+    public MCPLaunchConfiguration swapToObject(final YamlMCPLaunchConfiguration yamlConfig) {
+        ShardingSpherePreconditions.checkNotNull(yamlConfig, () -> new IllegalArgumentException(NULL_CONFIG_ERROR_MESSAGE));
+        MCPTransportConfiguration transportConfig = transportConfigSwapper.swapToObject(yamlConfig.getTransport());
+        validateTransportConfiguration(transportConfig);
+        Map<String, RuntimeDatabaseConfiguration> runtimeDatabases = swapToRuntimeDatabases(yamlConfig.getRuntimeDatabases());
+        return new MCPLaunchConfiguration(transportConfig, runtimeDatabases);
+    }
+    
     /**
      * Swap from YAML content to launch configuration.
      *
@@ -66,53 +99,141 @@ public final class YamlMCPLaunchConfigurationSwapper implements YamlConfiguratio
      * @return launch configuration
      */
     public MCPLaunchConfiguration swapToObject(final String yamlContent) {
-        Map<String, Object> yamlRoot = loadYamlRoot(yamlContent);
-        validateRootSections(yamlRoot);
-        YamlMCPLaunchConfiguration yamlConfig = YamlEngine.unmarshal(yamlContent, YamlMCPLaunchConfiguration.class, true);
-        return swapToObject(yamlConfig);
-    }
-    
-    @Override
-    public MCPLaunchConfiguration swapToObject(final YamlMCPLaunchConfiguration yamlConfig) {
-        YamlMCPLaunchConfiguration actualYamlConfig = null == yamlConfig ? new YamlMCPLaunchConfiguration() : yamlConfig;
-        MCPTransportConfiguration transportConfig = transportConfigSwapper.swapToObject(actualYamlConfig.getTransport());
-        validateTransportConfiguration(transportConfig);
-        Map<String, RuntimeDatabaseConfiguration> runtimeDatabases = swapToRuntimeDatabases(actualYamlConfig.getRuntimeDatabases());
-        return new MCPLaunchConfiguration(transportConfig, runtimeDatabases);
+        Map<?, ?> yamlRoot = loadYamlRoot(yamlContent);
+        validateYamlRoot(yamlRoot);
+        return swapToObject(createYamlConfig(yamlRoot));
     }
     
     @SuppressWarnings("unchecked")
-    private Map<String, Object> loadYamlRoot(final String yamlContent) {
-        Object yamlRoot = new Yaml().load(yamlContent);
-        return yamlRoot instanceof Map ? (Map<String, Object>) yamlRoot : Collections.emptyMap();
+    private Map<?, ?> loadYamlRoot(final String yamlContent) {
+        LoaderOptions loaderOptions = ShardingSphereYamlConstructor.createLoaderOptions();
+        loaderOptions.setAllowDuplicateKeys(false);
+        Object yamlRoot = new Yaml(loaderOptions).load(yamlContent);
+        return yamlRoot instanceof Map ? (Map<?, ?>) yamlRoot : Map.of();
+    }
+    
+    private void validateYamlRoot(final Map<?, ?> yamlRoot) {
+        validateRootProperties(yamlRoot);
+        Map<?, ?> transportSection = getRequiredMapping(yamlRoot, "transport", TRANSPORT_REQUIRED_ERROR_MESSAGE, TRANSPORT_MAPPING_ERROR_MESSAGE);
+        validateAllowedProperties(transportSection, "transport", TRANSPORT_PROPERTIES);
+        validateAllowedProperties(getRequiredMapping(transportSection, "http", "Property `transport.http` is required.", "Property `transport.http` must be a mapping."),
+                "transport.http", HTTP_PROPERTIES);
+        validateAllowedProperties(getRequiredMapping(transportSection, "stdio", "Property `transport.stdio` is required.", "Property `transport.stdio` must be a mapping."),
+                "transport.stdio", STDIO_PROPERTIES);
+        validateRuntimeDatabasesRoot(getRequiredMapping(yamlRoot, "runtimeDatabases", RUNTIME_DATABASES_REQUIRED_ERROR_MESSAGE, RUNTIME_DATABASES_MAPPING_ERROR_MESSAGE));
+    }
+    
+    private YamlMCPLaunchConfiguration createYamlConfig(final Map<?, ?> yamlRoot) {
+        YamlMCPLaunchConfiguration result = new YamlMCPLaunchConfiguration();
+        result.setTransport(createYamlTransportConfig(getRequiredMapping(yamlRoot, "transport", TRANSPORT_REQUIRED_ERROR_MESSAGE, TRANSPORT_MAPPING_ERROR_MESSAGE)));
+        result.setRuntimeDatabases(createYamlRuntimeDatabases(getRequiredMapping(yamlRoot, "runtimeDatabases",
+                RUNTIME_DATABASES_REQUIRED_ERROR_MESSAGE, RUNTIME_DATABASES_MAPPING_ERROR_MESSAGE)));
+        return result;
+    }
+    
+    private YamlMCPTransportConfiguration createYamlTransportConfig(final Map<?, ?> transportSection) {
+        YamlMCPTransportConfiguration result = new YamlMCPTransportConfiguration();
+        result.setHttp(createYamlHttpConfig(getRequiredMapping(transportSection, "http", "Property `transport.http` is required.", "Property `transport.http` must be a mapping.")));
+        result.setStdio(createYamlStdioConfig(getRequiredMapping(transportSection, "stdio", "Property `transport.stdio` is required.", "Property `transport.stdio` must be a mapping.")));
+        return result;
+    }
+    
+    private YamlHttpTransportConfiguration createYamlHttpConfig(final Map<?, ?> httpSection) {
+        YamlHttpTransportConfiguration result = new YamlHttpTransportConfiguration();
+        result.setEnabled(getBooleanValue(httpSection.get("enabled"), "transport.http.enabled"));
+        result.setBindHost(getStringValue(httpSection.get("bindHost"), "transport.http.bindHost"));
+        result.setPort(getIntegerValue(httpSection.get("port"), "transport.http.port"));
+        result.setEndpointPath(getStringValue(httpSection.get("endpointPath"), "transport.http.endpointPath"));
+        return result;
+    }
+    
+    private YamlStdioTransportConfiguration createYamlStdioConfig(final Map<?, ?> stdioSection) {
+        YamlStdioTransportConfiguration result = new YamlStdioTransportConfiguration();
+        result.setEnabled(getBooleanValue(stdioSection.get("enabled"), "transport.stdio.enabled"));
+        return result;
+    }
+    
+    private Map<String, YamlRuntimeDatabaseConfiguration> createYamlRuntimeDatabases(final Map<?, ?> runtimeDatabases) {
+        Map<String, YamlRuntimeDatabaseConfiguration> result = new LinkedHashMap<>(runtimeDatabases.size(), 1F);
+        for (Entry<?, ?> entry : runtimeDatabases.entrySet()) {
+            String databaseName = validateRuntimeDatabaseName(entry.getKey());
+            result.put(databaseName, createYamlRuntimeDatabaseConfig(databaseName, entry.getValue()));
+        }
+        return result;
     }
     
     @SuppressWarnings("unchecked")
-    private Map<String, Object> getConfiguredSection(final Map<String, Object> yamlRoot, final String sectionName) {
-        Object section = yamlRoot.get(sectionName);
-        return section instanceof Map ? (Map<String, Object>) section : Collections.emptyMap();
+    private Map<?, ?> getRequiredMapping(final Map<?, ?> yamlRoot, final String propertyName, final String requiredErrorMessage, final String mappingErrorMessage) {
+        ShardingSpherePreconditions.checkState(yamlRoot.containsKey(propertyName), () -> new IllegalArgumentException(requiredErrorMessage));
+        ShardingSpherePreconditions.checkState(yamlRoot.get(propertyName) instanceof Map, () -> new IllegalArgumentException(mappingErrorMessage));
+        return (Map<?, ?>) yamlRoot.get(propertyName);
     }
     
-    private void validateRootSections(final Map<String, Object> yamlRoot) {
-        validateLegacyRuntimeSection(getConfiguredSection(yamlRoot, "runtime"));
+    private YamlRuntimeDatabaseConfiguration createYamlRuntimeDatabaseConfig(final String databaseName, final Object value) {
+        ShardingSpherePreconditions.checkState(value instanceof Map,
+                () -> new IllegalArgumentException(String.format("Property `runtimeDatabases.%s` must be a mapping.", databaseName)));
+        Map<?, ?> runtimeDatabaseSection = (Map<?, ?>) value;
+        YamlRuntimeDatabaseConfiguration result = new YamlRuntimeDatabaseConfiguration();
+        result.setDatabaseType(getStringValue(runtimeDatabaseSection.get("databaseType"), "runtimeDatabases." + databaseName + ".databaseType"));
+        result.setJdbcUrl(getStringValue(runtimeDatabaseSection.get("jdbcUrl"), "runtimeDatabases." + databaseName + ".jdbcUrl"));
+        result.setUsername(getStringValue(runtimeDatabaseSection.get("username"), "runtimeDatabases." + databaseName + ".username"));
+        result.setPassword(getStringValue(runtimeDatabaseSection.get("password"), "runtimeDatabases." + databaseName + ".password"));
+        result.setDriverClassName(getStringValue(runtimeDatabaseSection.get("driverClassName"), "runtimeDatabases." + databaseName + ".driverClassName"));
+        return result;
     }
     
-    private void validateLegacyRuntimeSection(final Map<String, Object> runtimeSection) {
-        if (runtimeSection.isEmpty()) {
-            return;
+    private void validateRootProperties(final Map<?, ?> yamlRoot) {
+        for (Object each : yamlRoot.keySet()) {
+            String propertyName = String.valueOf(each);
+            ShardingSpherePreconditions.checkState(ROOT_PROPERTIES.contains(propertyName), () -> new IllegalArgumentException(formatUnsupportedPropertyMessage(propertyName)));
         }
-        if (runtimeSection.containsKey("props")) {
-            throw new IllegalArgumentException("`runtime.props` is no longer supported. Configure direct runtime databases with `runtimeDatabases`.");
+    }
+    
+    private void validateAllowedProperties(final Map<?, ?> section, final String sectionName, final Set<String> allowedProperties) {
+        for (Object each : section.keySet()) {
+            String propertyName = String.valueOf(each);
+            ShardingSpherePreconditions.checkState(allowedProperties.contains(propertyName),
+                    () -> new IllegalArgumentException(formatUnsupportedPropertyMessage(sectionName + "." + propertyName)));
         }
-        if (runtimeSection.containsKey("defaults")) {
-            throw new IllegalArgumentException("`runtime.defaults` is no longer supported. Configure direct runtime databases with `runtimeDatabases`.");
+    }
+    
+    private void validateRuntimeDatabasesRoot(final Map<?, ?> runtimeDatabases) {
+        for (Entry<?, ?> entry : runtimeDatabases.entrySet()) {
+            String databaseName = validateRuntimeDatabaseName(entry.getKey());
+            ShardingSpherePreconditions.checkState(entry.getValue() instanceof Map,
+                    () -> new IllegalArgumentException(String.format("Property `runtimeDatabases.%s` must be a mapping.", databaseName)));
+            validateAllowedProperties((Map<?, ?>) entry.getValue(), "runtimeDatabases." + databaseName, RUNTIME_DATABASE_PROPERTIES);
         }
-        if (runtimeSection.containsKey("databaseDefaults")) {
-            throw new IllegalArgumentException("`runtime.databaseDefaults` is no longer supported. Configure each runtime database explicitly under `runtimeDatabases`.");
+    }
+    
+    private String validateRuntimeDatabaseName(final Object key) {
+        ShardingSpherePreconditions.checkState(key instanceof String, () -> new IllegalArgumentException("Runtime logical database name must be a string."));
+        return (String) key;
+    }
+    
+    private Boolean getBooleanValue(final Object value, final String propertyName) {
+        ShardingSpherePreconditions.checkState(null == value || value instanceof Boolean,
+                () -> new IllegalArgumentException(String.format("Property `%s` must be a boolean.", propertyName)));
+        return (Boolean) value;
+    }
+    
+    private String getStringValue(final Object value, final String propertyName) {
+        ShardingSpherePreconditions.checkState(null == value || value instanceof String,
+                () -> new IllegalArgumentException(String.format("Property `%s` must be a string.", propertyName)));
+        return (String) value;
+    }
+    
+    private Integer getIntegerValue(final Object value, final String propertyName) {
+        if (null == value) {
+            return null;
         }
-        if (runtimeSection.containsKey("databases")) {
-            throw new IllegalArgumentException("`runtime.databases` is no longer supported. Configure direct runtime databases with `runtimeDatabases`.");
+        if (value instanceof Integer) {
+            return (Integer) value;
         }
+        if (value instanceof Long && (Long) value <= Integer.MAX_VALUE && (Long) value >= Integer.MIN_VALUE) {
+            return ((Long) value).intValue();
+        }
+        throw new IllegalArgumentException(String.format("Property `%s` must be an integer.", propertyName));
     }
     
     private void validateTransportConfiguration(final MCPTransportConfiguration transportConfig) {
@@ -122,30 +243,19 @@ public final class YamlMCPLaunchConfigurationSwapper implements YamlConfiguratio
     }
     
     private Map<String, RuntimeDatabaseConfiguration> swapToRuntimeDatabases(final Map<String, YamlRuntimeDatabaseConfiguration> yamlRuntimeDatabases) {
-        Map<String, YamlRuntimeDatabaseConfiguration> actualYamlRuntimeDatabases = null == yamlRuntimeDatabases ? new LinkedHashMap<>() : yamlRuntimeDatabases;
-        Map<String, RuntimeDatabaseConfiguration> result = new LinkedHashMap<>(actualYamlRuntimeDatabases.size(), 1F);
-        for (Entry<String, YamlRuntimeDatabaseConfiguration> entry : actualYamlRuntimeDatabases.entrySet()) {
-            String databaseName = normalizeText(entry.getKey());
-            ShardingSpherePreconditions.checkState(!databaseName.isEmpty(), () -> new IllegalArgumentException("Runtime logical database name cannot be blank."));
+        ShardingSpherePreconditions.checkNotNull(yamlRuntimeDatabases, () -> new IllegalArgumentException(RUNTIME_DATABASES_REQUIRED_ERROR_MESSAGE));
+        Map<String, RuntimeDatabaseConfiguration> result = new LinkedHashMap<>(yamlRuntimeDatabases.size(), 1F);
+        for (Entry<String, YamlRuntimeDatabaseConfiguration> entry : yamlRuntimeDatabases.entrySet()) {
+            String databaseName = entry.getKey();
+            ShardingSpherePreconditions.checkNotNull(databaseName, () -> new IllegalArgumentException("Runtime logical database name cannot be null."));
+            ShardingSpherePreconditions.checkState(!databaseName.isBlank(), () -> new IllegalArgumentException("Runtime logical database name cannot be blank."));
             ShardingSpherePreconditions.checkState(!result.containsKey(databaseName), () -> new IllegalArgumentException(String.format("Runtime logical database `%s` is duplicated.", databaseName)));
-            validateRuntimeDatabaseConfiguration(databaseName, entry.getValue());
             result.put(databaseName, runtimeDatabaseConfigSwapper.swapToObject(entry.getValue()));
         }
         return result;
     }
     
-    private void validateRuntimeDatabaseConfiguration(final String databaseName, final YamlRuntimeDatabaseConfiguration yamlConfig) {
-        YamlRuntimeDatabaseConfiguration actualYamlConfig = null == yamlConfig ? new YamlRuntimeDatabaseConfiguration() : yamlConfig;
-        validateRequiredText(actualYamlConfig.getDatabaseType(), "databaseType", databaseName);
-        validateRequiredText(actualYamlConfig.getJdbcUrl(), "jdbcUrl", databaseName);
-    }
-    
-    private void validateRequiredText(final String value, final String fieldName, final String databaseName) {
-        ShardingSpherePreconditions.checkState(!normalizeText(value).isEmpty(),
-                () -> new IllegalArgumentException(String.format("Runtime database `%s` property `%s` is required.", databaseName, fieldName)));
-    }
-    
-    private String normalizeText(final Object value) {
-        return null == value ? "" : String.valueOf(value).trim();
+    private String formatUnsupportedPropertyMessage(final String propertyName) {
+        return String.format("Unsupported YAML property `%s`.", propertyName);
     }
 }
